--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-$gray: #F4F4F4;
 
-body {
-  background: $gray; // Using this variable
+h1 {
+  color: rgba(0,0,0,0.6); // Using this variable
+  font-size: 80px;
 }
